--- a/client/index.jade
+++ b/client/index.jade
@@ -7,8 +7,5 @@ html
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
   body
-    img#apollo(src='/assets/apollo.jpg')
-    h1#title Apollo
-
-    script(src='/vendor/lodash/lodash.min.js')
-    script(src=isProd ? '/index.min.js' : '/index.js')
+    h1 my super portfolio
+    h2 this is a modification
