--- a/client/index.jade
+++ b/client/index.jade
@@ -9,3 +9,6 @@ html
   body
     h1 my super portfolio
     h2 this is a modification
+    ul
+      li: a(href='http://movie.chyld.info/') Movie Tribute
+      li: a(href='http://design.chyld.info/') Design with CSS
